fixed responsive on mobile and tablet

--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -53,13 +53,31 @@
     
 }
 
-@media only screen and (min-width:300px) and (max-width: 1000px) {
+@media only screen and (min-width:300px) and (max-width: 500px) {
     .logoHome {
-    right:5%;
+    /* right:-30%; */
+    opacity: 0.7;
+    width: 20em;
+    height: 20em;
+    background-color: var(--verdigris);
+    border-radius: 50%;
+    top: 15%;
+    right: 0;
+    left: 0;
+    margin-left: auto;
+    margin-right:auto;
     }
     .header {
-        left:40%;
+        left:0;
+        top:55%;
+        right: 0;
         text-align:center;
+        display: inline;
+        margin-left: auto;
+        margin-right: auto;
+        /* br:first-of-type {
+            content:"";
+        } */
     }
     .smIcons {
         justify-content: center;
@@ -69,4 +87,14 @@
     }
 }
 
-
+@media screen and (min-width:767px) and (max-width:1024px) {
+    .header {
+    left:0;
+    margin-left: 2rem;
+    }
+    .logoHome {
+        right: 0;
+        left: 30%;
+        top:2%;
+    }
+}
